Nav Fix + Button Padding increase on mobile

--- a/src/app/components/Button/Button.module.css
+++ b/src/app/components/Button/Button.module.css
@@ -41,3 +41,10 @@
   color: var(--cream);
   background-color: var(--darkBlue);
 }
+
+@media screen and (max-width: 768px) {
+  .btn {
+    font-size: 2rem;
+    padding: 15px 35px;
+  }
+}
