--- a/src/app/components/SubmitButton/SubmitButton.module.css
+++ b/src/app/components/SubmitButton/SubmitButton.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   font-size: 1.8rem;
   white-space: nowrap;
+  text-transform: uppercase;
   border-radius: 30px;
   user-select: none;
   transition: all 0.1s ease-in;
@@ -32,5 +33,12 @@
 @media screen and (max-width: 820px) {
   .btn {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .btn {
+    font-size: 2rem;
+    padding: 15px 35px;
   }
 }
